# ddm-perceptual-decision-model

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
results/: fit_report.txt
src/: ddm_model.py
src/ddm/: __init__.py  __main__.py  cli.py  config.py  plotting.py  simulation.py
tests/: test_cli.py  test_config.py  test_simulation.py
