[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddm-perceptual-decision-model"
version = "0.1.0"
description = "Production-ready Drift Diffusion Model simulator for perceptual decision experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DDM Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.8"
]

[project.scripts]
ddm-sim = "ddm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "src"
